<resources>
    <string name="app_name">Spotify Wrapped</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Feed">Feed</string>

    <string name="menu_home">Home</string>
    <string name="menu_singleWrapped">Single Wrapped</string>
    <string name="menu_account">Account</string>
    <string name="register_title">Sign up to view your Wrapped!</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_signup">Sign up</string>
    <string name="welcome_message">Welcome! \nLog in or sign up to get started!</string>
    <string name="login_title">Log in to view your Wrapped!</string>
    <string name="login_button">Log In</string>
    <string name="connect_title">Connect your Spotify Account!</string>
    <string name="connect_button">Connect</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="account_settings">Account Settings</string>
    <string name="hey_top_artist">Hey, top artist</string>
    <string name="like_button">like button</string>
    <string name="comment_button">comment button</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>

</resources>