<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_singleWrapped">

    <fragment
        android:id="@+id/nav_singleWrapped"
        android:name="com.example.spotifywrapped.ui.singleWrapped.SingleWrappedFragment"
        android:label="@string/menu_singleWrapped"
        tools:layout="@layout/fragment_single_wrapped" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.spotifywrapped.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.spotifywrapped.ui.wrapped.UserFeedFragment"
        android:label="@string/Feed"
        tools:layout="@layout/feed_fragment" />
</navigation>