<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.account.AccountFragment">

    <Button
        android:id="@+id/change_button"
        android:layout_width="228dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_confirm"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="206dp"
        android:layout_height="71dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/delete_account"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        android:background="@color/dark_gray"
        android:orientation="horizontal"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:fontFamily="@font/gothic_a1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/green"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_confirm"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_gray"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/green"
        app:endIconTint="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:fontFamily="@font/gothic_a1"
            android:hint="@string/register_confirm"
            android:inputType="textPassword"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/green"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/account_settings"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>