<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".AuthenticationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="286dp"
        android:layout_height="148dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/gothic_a1_bold"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/welcome_login"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/welcome_register"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/register_signup"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_login"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>