<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".AuthenticationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="285dp"
        android:layout_height="97dp"
        android:fontFamily="@font/gothic_a1_bold"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:background="@color/dark_gray"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/green"
        app:endIconTint="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:fontFamily="@font/gothic_a1"
            android:hint="@string/email"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/green"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:background="@color/dark_gray"
        android:orientation="horizontal"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:fontFamily="@font/gothic_a1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/green"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_confirm"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:background="@color/dark_gray"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/green"
        app:endIconTint="@color/green"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:fontFamily="@font/gothic_a1"
            android:hint="@string/register_confirm"
            android:inputType="textPassword"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/green"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="179dp"
        android:layout_height="69dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gothic_a1"
        android:text="@string/register_signup"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm"
        app:layout_constraintVertical_bias="0.831"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>